# savedplaces

./: .gitignore  README.md  docker-compose.yml  planned.md  run-locally.sh
backend/: lint.sh  migrate.sh  psql-shell.sh  pyproject.toml  requirements.txt  response_sushi.json  run-dev-poetry.sh  template.env  test.sh
backend/.githooks/: pre-commit
backend/alembic/: env.py
backend/alembic/versions/: 04b0136724ca_migration_at_202204022309.py  06185e47e8f2_migration_at_202204020025.py  5b80be498d37_migration_at_202204022346.py  7d079344d5b6_migration_at_202204022313.py  865dc6d8937c_migration_at_202204022311.py  866bf57c65f0_migration_at_202204020001.py  99194fa1d7ee_migration_at_202204101708.py  b1c96f19ff34_migration_at_202204022314.py  cb697b121368_migration_at_202204022230.py  f6896cf16db7_migration_at_202204022217.py  f7b4cef6330c_migration_at_202204022223.py  ffe77c89795d_migration_at_202204022231.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/core/settings/: app.py  base.py  test.py
backend/app/database/: connector.py  models.py
backend/app/database/schemas/: __init__.py  google.py  jwt.py
backend/app/mock_data/: response_burgers.json  response_kao_soi.json  response_pizza.json  response_russian.json  response_thai.json
backend/app/routes/: auth.py  nearby.py  placelists.py  places.py  users.py
backend/app/services/: distance.py  login.py  places.py  utils.py
backend/app/tests/: conftest.py  test_placelists.py  test_places.py  test_users.py
backend/scripts/: distance_testing.py  parse_testing.py
docker/: backend.dockerfile  (+3 more)
(+25 files in other folders)
